--- a/OpenStory/Views/Shared/_NavBarPartial.cshtml
+++ b/OpenStory/Views/Shared/_NavBarPartial.cshtml
@@ -10,8 +10,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Stories", "About", "Home")</li>
-                <li>@Html.ActionLink("Message Board", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Stories", "Index", "Stories")</li>
+                <li>@Html.ActionLink("Messages", "Contact", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
