New story form and functionality

--- a/OpenStory/Views/Stories/StoryList.cshtml
+++ b/OpenStory/Views/Stories/StoryList.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="col-sm-2">
-            <button class="btn btn-default"> New Story</button>
+            @Html.ActionLink("New Story", "New", "Stories", new { @class = "btn btn-default" })
         </div>
     </div>
 </div>
