--- a/OpenStory/Content/Site.css
+++ b/OpenStory/Content/Site.css
@@ -17,9 +17,9 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
+.identity input,
+.identity select,
+.identity textarea {
     max-width: 280px;
 }
 
