--- a/OpenStory/Views/Account/Register.cshtml
+++ b/OpenStory/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal identity", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
