topics can now be navigated to
Clicking on a specific topic will now take you to another view. This view will display the content and a list of any replies. Functionality for adding new replies is also there

--- a/OpenStory/Content/Site.css
+++ b/OpenStory/Content/Site.css
@@ -44,3 +44,11 @@ li {
 .tight {
     margin: 0;
 }
+
+a {
+    color: white;
+    text-decoration: none; /* no underline */
+}
+a:hover{
+    color:white;
+}
