--- a/OpenStory/Views/Stories/_TopicPartial.cshtml
+++ b/OpenStory/Views/Stories/_TopicPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@model OpenStory.Models.TopicPartialViewModel
 
 
-<div id="topic ID" class="tight">
+
+<a href="@Url.Action("Topic/" + Model.Story.Id,"Stories")" class="tight">
     <div class="row ">
         <div class="col-sm-6">
             <h3>@Model.Story.Title</h3>
@@ -14,13 +15,7 @@
         </div>
     </div>
     <hr class="tight" />
-</div>
+</a>
 
-@section scripts
-{
-    <script>
-        $(document).ready(function () {
-            console.log("hello")
-        });
-    </script>
-}
+
+
