--- a/OpenStory/Views/Shared/_NavBarPartial.cshtml
+++ b/OpenStory/Views/Shared/_NavBarPartial.cshtml
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Stories", "Index", "Stories")</li>
-                <li>@Html.ActionLink("Messages", "Contact", "Home")</li>
+                <li>@Html.ActionLink("Bookmarked", "Index", "Home")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
