topic domain model restructure
removed duplicate values stored on topics that really should be stored in domain model reply

--- a/OpenStory/Views/Stories/Topic.cshtml
+++ b/OpenStory/Views/Stories/Topic.cshtml
@@ -15,7 +15,7 @@
 <br />
 <hr />
 
-<div class="row">
+@*<div class="row">
     <div class="col-sm-1">
         <h4>@Model.Topic.ApplicationUser.Name</h4>
     </div>
@@ -37,7 +37,7 @@
         </div>
     </div>
 </div>
-<hr />
+<hr />*@
 
 
 @foreach (var reply in Model.Replies)
