--- a/OpenStory/Views/Stories/StoryForm.cshtml
+++ b/OpenStory/Views/Stories/StoryForm.cshtml
@@ -14,15 +14,15 @@
         @Html.ValidationSummary(true, "Please fix the following")
         <br>
         <div class="form-group">
-            @Html.TextBoxFor(m => m.newTopic.Title, new { @class = "form-control no-constraints", placeholder = "Title" })
-            @Html.ValidationMessageFor(m => m.newTopic.Title)
+            @Html.TextBoxFor(m => m.NewTopic.Title, new { @class = "form-control no-constraints", placeholder = "Title" })
+            @Html.ValidationMessageFor(m => m.NewTopic.Title)
         </div>
         <div class="form-group">
-            @Html.TextAreaFor(m => m.newTopic.Content, new { @class = "form-control no-constraints" })
-            @Html.ValidationMessageFor(m => m.newTopic.Content)
+            @Html.TextAreaFor(m => m.TopicReply.Content, new { @class = "form-control no-constraints" })
+            @Html.ValidationMessageFor(m => m.TopicReply.Content)
         </div>
         @Html.AntiForgeryToken()
-        @Html.HiddenFor(m => m.newTopic.Id)
+        @Html.HiddenFor(m => m.NewTopic.Id)
         <button type="submit" class="btm btn-primary btn-lg">Save</button>
     }
     <br />
