--- a/OpenStory/Views/Stories/Topic.cshtml
+++ b/OpenStory/Views/Stories/Topic.cshtml
@@ -66,15 +66,16 @@
     </div>
     <hr />
 }
-@Model.TotalPages
+Total pages = @Model.TotalPages
+<br />
+Page = @Model.Page
 
 @helper PageButtons(int start, int end)
     {
 
-        if (end < (start + 2))
+        if (end > (start + 1))
         {
             <li><a>@start</a></li>
-            <li><a>@{start++;}</a></li>
             <li><a>@{start++;}</a></li>
             <li><a>...</a></li>
             <li><a>@end</a></li>
@@ -104,7 +105,9 @@
         else
         {
             <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="#">1</a></li>
+            @PageButtons(1, Model.Page-1)
+            <li class="active"><a href="#">@Model.Page</a></li>
+            @PageButtons(Model.Page +1, Model.TotalPages)
             <li><a href="#">&raquo;</a></li>
         }
     </ul>
