Date to TimeSpan
Dates in my posts now display time since post instead of a date

--- a/OpenStory/Views/MyPosts/_PostPartial.cshtml
+++ b/OpenStory/Views/MyPosts/_PostPartial.cshtml
@@ -1,5 +1,31 @@
 ﻿@model OpenStory.Models.PostPartialViewModel
 
+
+@helper TimeSince(DateTime date)
+    {
+        TimeSpan time = DateTime.Now.Subtract(date);
+        if (time.TotalDays > 7)
+        {
+            <p class="list-group-item-heading"> @date.ToShortDateString()</p>
+        }
+        else if (time.TotalHours > 24)
+        {
+            <p class="list-group-item-heading">@Convert.ToInt16(time.TotalDays) d </p>
+        }
+        else if (time.TotalMinutes > 60)
+        {
+            <p class="list-group-item-heading">@Convert.ToInt16(time.TotalHours) h</p>
+        }
+        else if (time.TotalSeconds > 60)
+        {
+            <p class="list-group-item-heading">@Convert.ToInt16(time.TotalMinutes) m </p>
+        }
+        else
+        {
+            <p class="list-group-item-heading">@time.Seconds s</p>
+        }
+}
+
 <a href="" class="tight">
     <div class="row ">
         <div class="col-sm-1">
@@ -11,7 +37,8 @@
         <div class="col-sm-10">
             <div class=" list-group">
                 <h4 class="list-group-item-heading">@Model.Title</h4>
-                <p class="list-group-item-heading">@Model.PostDate</p>
+                @TimeSince(Model.PostDate)
+                @*<p class="list-group-item-heading">@Model.PostDate</p>*@
             </div>
         </div>
 
