Post remove duplicates
Before my posts was sectioned into topics and replies, but since the
domain model changed this was chainged as welll. Now everything is all
lumped together as a post regardless of whether it is a reply or a new
topic

--- a/OpenStory/Views/MyPosts/_PostPartial.cshtml
+++ b/OpenStory/Views/MyPosts/_PostPartial.cshtml
@@ -38,7 +38,7 @@
             <div class=" list-group">
                 <h4 class="list-group-item-heading">@Model.Title</h4>
                 @TimeSince(Model.PostDate)
-                @*<p class="list-group-item-heading">@Model.PostDate</p>*@
+                <p>@Model.Content</p>
             </div>
         </div>
 
