items in post history are now links

--- a/OpenStory/Views/MyPosts/Index.cshtml
+++ b/OpenStory/Views/MyPosts/Index.cshtml
@@ -1,13 +1,9 @@
 ﻿
 @model OpenStory.Models.MyPostsViewModel
 
-@{
-    ViewBag.Title = "Index";
-}
-
 <br />
 <br />
-<h1>My Posts</h1>
+<h1>Post History</h1>
 <hr />
 <br />
 <ul class="list-group transparent">
