--- a/OpenStory/Views/MyPosts/_PostPartial.cshtml
+++ b/OpenStory/Views/MyPosts/_PostPartial.cshtml
@@ -26,7 +26,7 @@
         }
 }
 
-<a href="" class="tight">
+<a href="/Stories/Topic/@Model.Id" class="tight">
     <div class="row ">
         <div class="col-sm-1">
             <h4>@Model.Username</h4>
@@ -45,6 +45,3 @@
     </div>
     <hr class="tight" />
 </a>
-
-
-@*"@Url.Action("Topic/" + Model.Story.Id, "Stories")"*@
