redirect fix to reply authorization
when clicking reply on a forum topic, it redirects you to login if you're not logged in. Now it will correctly redirect you back to that topic after logging in.

--- a/OpenStory/Views/Home/Index.cshtml
+++ b/OpenStory/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Open Story</h1>
-    <p class="lead"> Open Story is a platform for anyone to come and tell their story of any kind. Feel free to post any ideas you want to share</p>
+    <p class="lead"> Open Story is a platform for anyone to come and tell a story of any kind. Feel free to post any ideas or even ask a question on our formums</p>
     @Html.ActionLink("Register now to start posting","Register","Account", null, new { @class = "btn btn-primary btn-lg" })
 </div>
 
