--- a/OpenStory/Views/Shared/_NavBarPartial.cshtml
+++ b/OpenStory/Views/Shared/_NavBarPartial.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Stories", "Index", "Stories")</li>
+                <li>@Html.ActionLink("Stories", "Index", "Stories" , new { page = 1},null)</li>
                 <li>@Html.ActionLink("Post History", "Index", "MyPosts")</li>
             </ul>
             @Html.Partial("_LoginPartial")
