--- a/OpenStory/Views/Stories/Topic.cshtml
+++ b/OpenStory/Views/Stories/Topic.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="col-sm-9">
             <div class="list-group">
-                <p class="list-group-item-heading">@reply.Content</p>
+                <pre class="list-group-item-heading">@reply.Content</pre>
                 <br />
                 <button class="list-group-item-heading btn btn-primary">
                     <i class=" list-group-item-heading fa fa-thumbs-o-up"></i>
