--- a/OpenStory/Views/Stories/_ReplyPartial.cshtml
+++ b/OpenStory/Views/Stories/_ReplyPartial.cshtml
@@ -24,7 +24,7 @@
 </div>
 
 <script>
-    // this code is for allowing user to hit tab in text area
+    // this code is for allowing user tab in the text area
     var textareas = document.getElementsByTagName('textarea');
     var count = textareas.length;
     for (var i = 0; i < count; i++) {
