--- a/OpenStory/Views/Stories/Topic.cshtml
+++ b/OpenStory/Views/Stories/Topic.cshtml
@@ -35,6 +35,7 @@
                     <i class=" list-group-item-heading fa fa-thumbs-o-down"></i>
                     Dislike
                 </button>
+                <strong>@reply.Likes</strong>
             </div>
         </div>
     </div>
